--- a/index.htm
+++ b/index.htm
@@ -6,40 +6,49 @@
     <meta name="author" content="capsunlock" />
     <meta name="keyword" content="gym, exercise, health, fitness" />
     <title>themiwagon</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <section class="sec-zero">
       <div class="blue-surf">fitness</div>
-      <div class="white-surf">
+      <div class="blank-surf">
         <div class="red-surf">
-          <div></div>
-          <div></div>
-          <div></div>
+          <button>
+            <div class="top-stroke"></div>
+            <div class="mid-stroke"></div>
+            <div class="butt-stroke"></div>
+          </button>
         </div>
       </div>
     </section>
     <section class="sec-one">
-      <div class="arrow-right"></div>
-      <div class="arrow-left"></div>
+      <div>
+        <button class="right">&#8594;</button>
+        <button class="left">&#8592;</button>
+      </div>
     </section>
 
     <section class="sec-two">
-      <h3>about fitness center</h3>
-      <p>
-        We are the best at fulfilling your potential and archieving your goals.
-      </p>
+      <h5>about fitness center</h5>
+      <h3>
+        We are the best at <br />fulfilling your potential <br />
+        and archieving your goals.
+      </h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora porro
         perferendis quia libero? Facilis dolore eligendi provident voluptatibus
         perspiciatis at officia, eius quos hic similique sequi fugiat facere ad
         obcaecati.
       </p>
-      <button>our mission</button> <button>our vision</button>
-      <button>our goal</button>
+      <button class="our-mission">our mission</button> <button class="our-vision">our vision</button>
+      <button class="our-goal">our goal</button>
     </section>
 
     <section class="sec-three">
-      <div></div>
+      <div class="white-rocket">
+        <!-- <img src="tom.jpg" alt=""> -->
+         <p>yfsahvj</p>
+      </div>
       <div>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit natus
         quidem voluptas placeat aut aliquid quam ipsum minus quos obcaecati. Ea
@@ -49,31 +58,31 @@
     </section>
 
     <section class="sec-four">
-      <button>make appointment</button>
-      <div>
-        <button></button>
-        <p>call to our experts</p>
-        <p>free: + 0123 456 7890</p>
+      <button class="mk-appoint">make appointment</button>
+      <div class="short-butt">
+        <button class="call-ex"></button>
+        <p><a class="call-to">call to our experts</a></br>free: + 0123 456 7890</p>
       </div>
       <img />
     </section>
 
     <section class="sec-five">
-      <div>
-        <h4>fitness Goal</h4>
-        <p>Complete youyr possibilities, Achieve Your Fitness Goals.</p>
+      <div class="five-f">
+        <h5>fitness Goal</h5>
+        <p>Complete your <br> possibilities, Achieve Your <br> Fitness Goals.</p>
       </div>
-      <div>
-        <div><img alt="dumbell-hands" /></div>
+      <div class="five-s">
         <div>
-          <h3>free fitness training</h3>
+          <img alt="dumbell-hands" /></div>
+        <div >
+          <h3>Free Fitness Training</h3>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit et
             laudantium
           </p>
         </div>
       </div>
-      <div>
+      <div class="five-s">
         <div><img src="" alt="running-legs" /></div>
         <div>
           <h3>Cardio and Strenght</h3>
@@ -84,12 +93,12 @@
         </div>
       </div>
       <button class="read-d">read details</button>
-      <img alt="fitness-goal-banner" />
+      <img class="sec-img-omega" alt="fitness-goal-banner" />
     </section>
 
-    <section class="section-six">
-      <div>
-        <h3>Why choose us?</h3>
+    <section class="sec-six">
+      <div class="static-six">
+        <h5>Why choose us?</h3>
         <h1>out our highlights below</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae,
@@ -100,7 +109,7 @@
       </div>
       <div>
         <div class="slide"></div>
-        <button></button> <button></button>
+        <button>&lt;</button><button>&gt;</button>
       </div>
     </section>
 
@@ -321,6 +330,99 @@
       </div>
     </section>
 
-    <section class="sec-twel"></section>
+    <section class="sec-twel">
+      <div class="white-space"></div>
+    </section>
+
+    <section class="sec-thirteen">
+      <div>
+        <input placeholder="Email address to Subscribe" />
+        <button>subscribe</button>
+      </div>
+
+      <div>
+        <button>
+          <img alt="facebook-logo" />
+        </button>
+        <button>
+          <img alt="twitter-logo" />
+        </button>
+        <button>
+          <img alt="instagram-logo" />
+        </button>
+        <button>
+          <img alt="linkdin" />
+        </button>
+      </div>
+
+      <div>
+        <div>
+          <img alt="gloves" />
+          <h3>fitness</h3>
+        </div>
+      </div>
+
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi sunt
+        deserunt dicta. Laudantium cupiditate sequi quam placeat doloribus, quia
+        vel
+      </p>
+
+      <div>
+        <h3>quick link</h3>
+
+        <p>home</p>
+        <p>about us</p>
+        <p>our courses</p>
+        <p>our features</p>
+        <p>our blog & news</p>
+        <p>testimonial</p>
+      </div>
+
+      <div>
+        <h3>contact info</h3>
+        <div>
+          <img />
+          <h3>address</h3>
+          <p>123 street new york</p>
+        </div>
+
+        <div>
+          <img />
+          <h3>mail us</h3>
+          <p>info@example.com</p>
+        </div>
+
+        <div>
+          <img />
+          <h3>telephone</h3>
+          <p>(+012) 3456 7890 123</p>
+        </div>
+      </div>
+
+      <div>
+        <h3>recent work</h3>
+
+        <div>
+          <img alt="work-9" />
+          <img alt="work-10" />
+          <img alt="work-11" />
+          <img alt="work-12" />
+          <img alt="work-1" />
+          <img alt="work-2" />
+          <img alt="work-3" />
+          <img alt="work-4" />
+          <img alt="work-5" />
+          <img alt="work-6" />
+          <img alt="work-7" />
+          <img alt="work-8" />
+        </div>
+      </div>
+    </section>
+
+    <section class="sec-omega">
+      <p><a href="#"> &#169; your site name</a>, All right reserved.</p>
+      <p>designed by...</p>
+    </section>
   </body>
 </html>
