sec... to sec-seven (sev-card hover)

--- a/index.htm
+++ b/index.htm
@@ -109,13 +109,13 @@
       </div>
       <div>
         <div class="slide"></div>
-        <button>&lt;</button><button>&gt;</button>
+        <button class="a-head-left">&lt;</button><button class="a-head-right">&gt;</button>
       </div>
     </section>
 
     <section class="sec-seven">
-      <div>
-        <h3>our courses</h3>
+      <div class="sev-zero">
+        <h4>our courses</h4>
         <h1>out our highlights below</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae,
@@ -125,14 +125,19 @@
         </p>
       </div>
 
-      <div>
-        <img src="" alt="staning-hands" />
-        <div>
-          <img alt="avi01" />
-          <h5>paul flavius</h5>
-          <p>date: saturday</p>
-          <p>time: 06:00 - 07:00</p>
+      <div class="sev-cards">
+        <div class="sev-cards-top">
+          <img src="" alt="staning-hands" />
+          <div>
+            <div class="sub-div">
+              <img alt="avi01" />
+              <h5>paul flavius</h5>
+            </div>
+              <p>date: saturday</p>
+              <p>time: 06:00 - 07:00</p>
+          </div>
         </div>
+        
         <h4>gym fitness class</h4>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
@@ -141,14 +146,15 @@
         <button>read more</button>
       </div>
 
-      <div>
+      <div class="sev-cards">
+        <div class="sev-cards-top">
         <img src="" alt="short-hands" />
         <div>
           <img alt="avi01" />
           <h5>paul flavius</h5>
           <p>date: saturday</p>
           <p>time: 06:00 - 07:00</p>
-        </div>
+        </div> </div>
         <h4>gym fitness class</h4>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
@@ -157,13 +163,33 @@
         <button>read more</button>
       </div>
 
-      <div>
+      <div class="sev-cards">
+        <div class="sev-cards-top">
         <img src="" alt="bending-hands" />
         <div>
           <img alt="avi01" />
           <h5>paul flavius</h5>
           <p>date: saturday</p>
           <p>time: 06:00 - 07:00</p>
+        </div> 
+      </div>
+        <h4>gym fitness class</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+          inventore dolorem rem eum a unde
+        </p>
+        <button>read more</button>
+      </div>
+
+      <div class="sev-cards">
+        <div class="sev-cards-top">
+          <img src="" alt="flexable-hands" />
+          <div>
+            <img alt="avi01" />
+            <h5>paul flavius</h5>
+            <p>date: saturday</p>
+            <p>time: 06:00 - 07:00</p>
+          </div> 
         </div>
         <h4>gym fitness class</h4>
         <p>
@@ -173,13 +199,15 @@
         <button>read more</button>
       </div>
 
-      <div>
-        <img src="" alt="flexable-hands" />
-        <div>
-          <img alt="avi01" />
-          <h5>paul flavius</h5>
-          <p>date: saturday</p>
-          <p>time: 06:00 - 07:00</p>
+      <div class="sev-cards">
+        <div class="sev-cards-top">
+          <img src="" alt="closed-hands" />
+          <div>
+            <img alt="avi01" />
+            <h5>paul flavius</h5>
+            <p>date: saturday</p>
+            <p>time: 06:00 - 07:00</p>
+          </div>
         </div>
         <h4>gym fitness class</h4>
         <p>
@@ -189,13 +217,15 @@
         <button>read more</button>
       </div>
 
-      <div>
-        <img src="" alt="closed-hands" />
-        <div>
-          <img alt="avi01" />
-          <h5>paul flavius</h5>
-          <p>date: saturday</p>
-          <p>time: 06:00 - 07:00</p>
+      <div class="sev-cards">
+        <div class="sev-cards-top">
+          <img src="" alt="fit-legs" />
+          <div>
+            <img alt="avi01" />
+            <h5>paul flavius</h5>
+            <p>date: saturday</p>
+            <p>time: 06:00 - 07:00</p>
+          </div> 
         </div>
         <h4>gym fitness class</h4>
         <p>
@@ -204,25 +234,10 @@
         </p>
         <button>read more</button>
       </div>
-
-      <div>
-        <img src="" alt="fit-legs" />
-        <div>
-          <img alt="avi01" />
-          <h5>paul flavius</h5>
-          <p>date: saturday</p>
-          <p>time: 06:00 - 07:00</p>
-        </div>
-        <h4>gym fitness class</h4>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
-          inventore dolorem rem eum a unde
-        </p>
-        <button>read more</button>
-      </div>
+      <button class="more-courses">more courses</button>
     </section>
 
-    <section class="sec-eight">
+    <section class="sec-seventh">
       <div>
         <h3>our blogs</h3>
         <h1>Check out our latest stories</h1>
