sec-seven (sev-card hover) to sec-eight(eight-slide example)

--- a/index.htm
+++ b/index.htm
@@ -178,7 +178,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
           inventore dolorem rem eum a unde
         </p>
-        <button>read more</button>
+        <button>read more </button>
       </div>
 
       <div class="sev-cards">
@@ -238,8 +238,8 @@
     </section>
 
     <section class="sec-seventh">
-      <div>
-        <h3>our blogs</h3>
+      <div class="seventh-top">
+        <h4>our blogs</h4>
         <h1>Check out our latest stories</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
@@ -250,20 +250,22 @@
       </div>
 
       <!-- slideshow div -->
-      <div>
-        <img alt="feature-1" />
+      <div class="sev-slide-sample">
+        <img class="sev-top-i"
+        alt="feature-1" />
 
-        <div>
-          <img alt="avi-skull" />
+        <div class="sev-mid">
+          <img class="sev-mid-i"
+          alt="avi-skull" />
           <div><img alt="cal" />30 dec 2025</div>
         </div>
 
-        <h4>full body homw workout</h4>
+        <h4>full body home workout</h4>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur harum
           dolore tempora ex quaerat, aliquid aspernatur ad culpa fuga
         </p>
-        <button>read more</button>
+        <button>read more <a class="right">&#8594;</a></button>
       </div>
 
       <button></button> <button></button> <button></button> <button></button>
