sec-eight(eight-slide example) to sec-omega

--- a/index.htm
+++ b/index.htm
@@ -268,19 +268,17 @@
         <button>read more <a class="right">&#8594;</a></button>
       </div>
 
-      <button></button> <button></button> <button></button> <button></button>
+      <div class="sev-butt-button"><button></button> <button></button> <button></button> <button></button></div>
     </section>
 
     <section class="sec-nine">
-      <div>
-        <p>explore fitness center</p>
+        <h1>explore fitness <br> center</h1>
         <button>watch video</button>
-      </div>
     </section>
 
     <section class="sec-ten">
-      <div>
-        <h3>our trainer</h3>
+      <div class="ten-top">
+        <h4>our trainer</h3>
         <h1>meet our amazing team</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
@@ -290,7 +288,7 @@
         </p>
       </div>
 
-      <div>
+      <div class="trainer-cards">
         <img alt="team-1" />
 
         <div>
@@ -299,7 +297,7 @@
         </div>
       </div>
 
-      <div>
+      <div class="trainer-cards">
         <img alt="team-2" />
 
         <div>
@@ -308,7 +306,7 @@
         </div>
       </div>
 
-      <div>
+      <div class="trainer-cards">
         <img alt="team-3" />
 
         <div>
@@ -317,7 +315,7 @@
         </div>
       </div>
 
-      <div>
+      <div class="trainer-cards">
         <img alt="team-4" />
 
         <div>
@@ -328,36 +326,40 @@
     </section>
 
     <section class="sec-ele">
-      <h3>testimonial</h3>
-      <h1>what our custormers are saying</h1>
+      <div class="ele-top">
+        <h4>testimonial</h4>
+        <h1>what our custormers are saying</h1>
+      </div>
 
-      <button></button> <button></button>
+      <button class="ele-less">&lt;</button> 
+      <img class="middle-butt-img">
+      <button class="ele-great">&gt;</button>
 
       <!-- slideshow display -->
-      <div>
+      <div class="ele-show">
         <img alt="testimonial-1" />
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia,
-          eligendi. Natus, eveniet dolores totam nobis cumque aperiam nam
-          cupiditate rerum praesentium voluptates?
+        <p class="ele-top-p">
+         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem libero praesentium odio porro atque nulla cumque quod, alias quia soluta magni animi numquam corporis quo saepe nihil sit suscipit et. Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+         <!-- Voluptates provident 
+         perferendis quis voluptatum labore numquam autem veniam,  -->
         </p>
-        <h5>client name</h5>
-        <p>profession</p>
-        <!--                          -->
+        <h4>client name</h4>
+        <p class="ele-prof">profession</p>
+        <!-- five stars (four full and 1 half full) -->
       </div>
     </section>
 
-    <section class="sec-twel">
+    <!-- <section class="sec-twel">
       <div class="white-space"></div>
-    </section>
+    </section> -->
 
     <section class="sec-thirteen">
-      <div>
+      <div class="top-teen">
         <input placeholder="Email address to Subscribe" />
         <button>subscribe</button>
       </div>
 
-      <div>
+      <div class="tier-two-teen">
         <button>
           <img alt="facebook-logo" />
         </button>
@@ -372,12 +374,11 @@
         </button>
       </div>
 
-      <div>
-        <div>
+      <div class="teen-mid-top">
+         <div class="teen-pseudo-top">
           <img alt="gloves" />
           <h3>fitness</h3>
         </div>
-      </div>
 
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi sunt
@@ -385,39 +386,47 @@
         vel
       </p>
 
-      <div>
+      </div>
+     
+      <div class="teen-quick-links">
         <h3>quick link</h3>
 
-        <p>home</p>
-        <p>about us</p>
-        <p>our courses</p>
-        <p>our features</p>
-        <p>our blog & news</p>
-        <p>testimonial</p>
+        <p><a href="">home</a></p>
+        <p><a href="">about us</a></p>
+        <p><a href="">our courses</a></p>
+        <p><a href="">our features</a></p>
+        <p><a href="">our blog & news</a></p>
+        <p><a href="">testimonial</a></p>
       </div>
 
-      <div>
+      <div class="contact-teen">
         <h3>contact info</h3>
-        <div>
-          <img />
-          <h3>address</h3>
-          <p>123 street new york</p>
+        <div class="contact-div-teen">
+          <img alt="t"/>
+          <div>
+            <h3>address</h3>
+            <p>123 street new york</p>
+          </div>
         </div>
 
-        <div>
-          <img />
-          <h3>mail us</h3>
-          <p>info@example.com</p>
+        <div class="contact-div-teen">
+          <img src="" alt="t"/>
+          <div>
+            <h3>mail us</h3>
+            <p>info@example.com</p>
+          </div>
         </div>
 
-        <div>
-          <img />
-          <h3>telephone</h3>
-          <p>(+012) 3456 7890 123</p>
+        <div class="contact-div-teen">
+          <img alt="t" />
+          <div>
+            <h3>telephone</h3>
+            <p>(+012) 3456 7890 123</p>
+          </div>
         </div>
       </div>
 
-      <div>
+      <div class="teen-omega">
         <h3>recent work</h3>
 
         <div>
@@ -425,10 +434,12 @@
           <img alt="work-10" />
           <img alt="work-11" />
           <img alt="work-12" />
+          <br>
           <img alt="work-1" />
           <img alt="work-2" />
           <img alt="work-3" />
           <img alt="work-4" />
+          <br>
           <img alt="work-5" />
           <img alt="work-6" />
           <img alt="work-7" />
