7/10 done with mobile

--- a/index.htm
+++ b/index.htm
@@ -40,7 +40,8 @@
         perspiciatis at officia, eius quos hic similique sequi fugiat facere ad
         obcaecati.
       </p>
-      <button class="our-mission">our mission</button> <button class="our-vision">our vision</button>
+      <button class="our-mission">our mission</button> 
+      <br> <button class="our-vision">our vision</button> <br>
       <button class="our-goal">our goal</button>
     </section>
 
@@ -63,7 +64,7 @@
         <button class="call-ex"></button>
         <p><a class="call-to">call to our experts</a></br>free: + 0123 456 7890</p>
       </div>
-      <img />
+      <img class="sec-four-lastimg" src="images/sec-one-last-pic.png" />
     </section>
 
     <section class="sec-five">
@@ -73,7 +74,7 @@
       </div>
       <div class="five-s">
         <div>
-          <img alt="dumbell-hands" /></div>
+          <img alt="dumbell-hands" src="images/handsonlongbell.png" /></div>
         <div >
           <h3>Free Fitness Training</h3>
           <p>
@@ -83,7 +84,7 @@
         </div>
       </div>
       <div class="five-s">
-        <div><img src="" alt="running-legs" /></div>
+        <div><img src="images/legsflexindndex.png" alt="running-legs" /></div>
         <div>
           <h3>Cardio and Strenght</h3>
           <p>
@@ -93,7 +94,7 @@
         </div>
       </div>
       <button class="read-d">read details</button>
-      <img class="sec-img-omega" alt="fitness-goal-banner" />
+      <img class="sec-img-omega" src="images/sec-two-lst-pic.png" alt="fitness-goal-banner" />
     </section>
 
     <section class="sec-six">
@@ -106,6 +107,12 @@
           facilis eaque obcaecati quidem? Iste dolorem debitis unde, labore a
           molestias?
         </p>
+      </div>
+      <div class="six-mid-belt">
+        <img src="images/highlighttwo.jpeg" alt="">
+        <h1>It's more Than A Game</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo vel minus sed enim voluptate</p>
+        <button>read more</button>
       </div>
       <div>
         <div class="slide"></div>
@@ -127,7 +134,7 @@
 
       <div class="sev-cards">
         <div class="sev-cards-top">
-          <img src="" alt="staning-hands" />
+          <img src="images/handsonlongbell.png" alt="staning-hands" />
           <div>
             <div class="sub-div">
               <img alt="avi01" />
@@ -148,7 +155,7 @@
 
       <div class="sev-cards">
         <div class="sev-cards-top">
-        <img src="" alt="short-hands" />
+        <img src="images/chargelongbell.png" alt="short-hands" />
         <div>
           <img alt="avi01" />
           <h5>paul flavius</h5>
@@ -165,7 +172,7 @@
 
       <div class="sev-cards">
         <div class="sev-cards-top">
-        <img src="" alt="bending-hands" />
+        <img src="images/nakedflex.png" alt="bending-hands" />
         <div>
           <img alt="avi01" />
           <h5>paul flavius</h5>
@@ -183,7 +190,7 @@
 
       <div class="sev-cards">
         <div class="sev-cards-top">
-          <img src="" alt="flexable-hands" />
+          <img src="images/handspread.png" alt="flexable-hands" />
           <div>
             <img alt="avi01" />
             <h5>paul flavius</h5>
@@ -201,7 +208,7 @@
 
       <div class="sev-cards">
         <div class="sev-cards-top">
-          <img src="" alt="closed-hands" />
+          <img src="images/boxinggloves.png" alt="closed-hands" />
           <div>
             <img alt="avi01" />
             <h5>paul flavius</h5>
@@ -219,7 +226,7 @@
 
       <div class="sev-cards">
         <div class="sev-cards-top">
-          <img src="" alt="fit-legs" />
+          <img src="images/legsflexindndex.png" alt="fit-legs" />
           <div>
             <img alt="avi01" />
             <h5>paul flavius</h5>
@@ -337,7 +344,8 @@
 
       <!-- slideshow display -->
       <div class="ele-show">
-        <img alt="testimonial-1" />
+        <a class="ele-discreet">"</a>
+        <img alt="testimonial-1" src="images/custormer-one.jpeg"/>
         <p class="ele-top-p">
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem libero praesentium odio porro atque nulla cumque quod, alias quia soluta magni animi numquam corporis quo saepe nihil sit suscipit et. Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
          <!-- Voluptates provident 
@@ -429,21 +437,21 @@
       <div class="teen-omega">
         <h3>recent work</h3>
 
-        <div>
-          <img alt="work-9" />
-          <img alt="work-10" />
-          <img alt="work-11" />
-          <img alt="work-12" />
+        <div class="teen-omega-recentwork">
+          <img alt="work-1" src="images/recent-work-one.jpeg"/>
+          <img alt="work-2" src="images/recent-work-two.jpeg"/>
+          <img alt="work-3" src="images/recent-work-three.jpg"/>
+          <img alt="work-4" src="images/recent-work-four.jpeg"/>
           <br>
-          <img alt="work-1" />
-          <img alt="work-2" />
-          <img alt="work-3" />
-          <img alt="work-4" />
+          <img alt="work-5" src="images/recent-work-five.jpeg"/>
+          <img alt="work-6" src="images/recent-work-six.jpeg"/>
+          <img alt="work-7" src="images/highlightone.jpeg"/>
+          <img alt="work-8" src="images/recent-work-eight.jpeg"/>
           <br>
-          <img alt="work-5" />
-          <img alt="work-6" />
-          <img alt="work-7" />
-          <img alt="work-8" />
+          <img alt="work-9" src="images/recent-work-nine.jpeg"/>
+          <img alt="work-10" src="images/recent-work-ten.jpeg"/>
+          <img alt="work-11" src="images/recent-work-eleven.jpeg"/>
+          <img alt="work-12" src="images/recent-work-twelve.jpeg"/>
         </div>
       </div>
     </section>
