95% done with mobile

--- a/index.htm
+++ b/index.htm
@@ -61,7 +61,7 @@
     <section class="sec-four">
       <button class="mk-appoint">make appointment</button>
       <div class="short-butt">
-        <button class="call-ex"></button>
+        <button class="call-ex"><img src="images/telephone.png"> </button>
         <p><a class="call-to">call to our experts</a></br>free: + 0123 456 7890</p>
       </div>
       <img class="sec-four-lastimg" src="images/sec-one-last-pic.png" />
@@ -137,7 +137,7 @@
           <img src="images/handsonlongbell.png" alt="staning-hands" />
           <div>
             <div class="sub-div">
-              <img alt="avi01" />
+              <img alt="avi01" src="images/custormer-two.jpeg" />
               <h5>paul flavius</h5>
             </div>
               <p>date: saturday</p>
@@ -157,7 +157,7 @@
         <div class="sev-cards-top">
         <img src="images/chargelongbell.png" alt="short-hands" />
         <div>
-          <img alt="avi01" />
+          <img alt="avi01" src="images/custormer-two.jpeg"  />
           <h5>paul flavius</h5>
           <p>date: saturday</p>
           <p>time: 06:00 - 07:00</p>
@@ -174,7 +174,7 @@
         <div class="sev-cards-top">
         <img src="images/nakedflex.png" alt="bending-hands" />
         <div>
-          <img alt="avi01" />
+          <img alt="avi01" src="images/custormer-two.jpeg" />
           <h5>paul flavius</h5>
           <p>date: saturday</p>
           <p>time: 06:00 - 07:00</p>
@@ -192,7 +192,7 @@
         <div class="sev-cards-top">
           <img src="images/handspread.png" alt="flexable-hands" />
           <div>
-            <img alt="avi01" />
+            <img alt="avi01" src="images/custormer-two.jpeg" />
             <h5>paul flavius</h5>
             <p>date: saturday</p>
             <p>time: 06:00 - 07:00</p>
@@ -210,7 +210,7 @@
         <div class="sev-cards-top">
           <img src="images/boxinggloves.png" alt="closed-hands" />
           <div>
-            <img alt="avi01" />
+            <img alt="avi01" src="images/custormer-two.jpeg" />
             <h5>paul flavius</h5>
             <p>date: saturday</p>
             <p>time: 06:00 - 07:00</p>
@@ -228,7 +228,7 @@
         <div class="sev-cards-top">
           <img src="images/legsflexindndex.png" alt="fit-legs" />
           <div>
-            <img alt="avi01" />
+            <img alt="avi01" src="images/custormer-two.jpeg" />
             <h5>paul flavius</h5>
             <p>date: saturday</p>
             <p>time: 06:00 - 07:00</p>
@@ -258,22 +258,27 @@
 
       <!-- slideshow div -->
       <div class="sev-slide-sample">
-        <img class="sev-top-i"
-        alt="feature-1" />
-
-        <div class="sev-mid">
-          <img class="sev-mid-i"
-          alt="avi-skull" />
-          <div><img alt="cal" />30 dec 2025</div>
-        </div>
-
-        <h4>full body home workout</h4>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur harum
-          dolore tempora ex quaerat, aliquid aspernatur ad culpa fuga
-        </p>
-        <button>read more <a class="right">&#8594;</a></button>
+        <div class="sev-slidetop">
+          <img class="sev-top-i"
+        alt="feature-1" src="images/sec-three-java-one.jpeg"/>
       </div>
+
+        <div class="sev-cover-mid">
+          <div class="sev-mid">
+            <img class="sev-mid-i"
+            alt="avi-skull" />
+            <div><img alt="cal" />30 dec 2025</div>
+          </div>
+  
+          <h4>full body home workout</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur harum
+            dolore tempora ex quaerat, aliquid aspernatur ad culpa fuga
+          </p>
+          <button>read more <a class="right">&#8594;</a></button>
+        </div>
+        </div>
+        
 
       <div class="sev-butt-button"><button></button> <button></button> <button></button> <button></button></div>
     </section>
@@ -296,7 +301,7 @@
       </div>
 
       <div class="trainer-cards">
-        <img alt="team-1" />
+        <img src="images/trainer-one.jpeg" alt="team-1" />
 
         <div>
           <h5>trainer name</h5>
@@ -305,7 +310,7 @@
       </div>
 
       <div class="trainer-cards">
-        <img alt="team-2" />
+        <img src="images/trainer-two.jpeg" alt="team-2" />
 
         <div>
           <h5>trainer name</h5>
@@ -314,7 +319,7 @@
       </div>
 
       <div class="trainer-cards">
-        <img alt="team-3" />
+        <img src="images/trainer-three.jpeg" alt="team-3" />
 
         <div>
           <h5>trainer name</h5>
@@ -323,7 +328,7 @@
       </div>
 
       <div class="trainer-cards">
-        <img alt="team-4" />
+        <img src="images/trainer-four.jpg" alt="team-4" />
 
         <div>
           <h5>trainer name</h5>
@@ -369,22 +374,22 @@
 
       <div class="tier-two-teen">
         <button>
-          <img alt="facebook-logo" />
+          <img src="images/facebook.png"  alt="facebook-logo" />
         </button>
         <button>
-          <img alt="twitter-logo" />
+          <img src="images/twitter.png"  alt="twitter-logo" />
         </button>
         <button>
-          <img alt="instagram-logo" />
+          <img src="images/instagram-1.png" alt="instagram-logo" />
         </button>
         <button>
-          <img alt="linkdin" />
+          <img src="images/linkedin.png" alt="linkdin" />
         </button>
       </div>
 
       <div class="teen-mid-top">
          <div class="teen-pseudo-top">
-          <img alt="gloves" />
+          <img src="images/gloves.png" alt="gloves" />
           <h3>fitness</h3>
         </div>
 
@@ -410,7 +415,7 @@
       <div class="contact-teen">
         <h3>contact info</h3>
         <div class="contact-div-teen">
-          <img alt="t"/>
+          <img src="images/location-pin.png" alt="t"/>
           <div>
             <h3>address</h3>
             <p>123 street new york</p>
@@ -418,7 +423,7 @@
         </div>
 
         <div class="contact-div-teen">
-          <img src="" alt="t"/>
+          <img src="images/mail.png" alt="t"/>
           <div>
             <h3>mail us</h3>
             <p>info@example.com</p>
@@ -426,7 +431,7 @@
         </div>
 
         <div class="contact-div-teen">
-          <img alt="t" />
+          <img alt="t" src="images/telephone-1.png"/>
           <div>
             <h3>telephone</h3>
             <p>(+012) 3456 7890 123</p>
