95% done with mobile

--- a/index.htm
+++ b/index.htm
@@ -266,8 +266,8 @@
         <div class="sev-cover-mid">
           <div class="sev-mid">
             <img class="sev-mid-i"
-            alt="avi-skull" />
-            <div><img alt="cal" />30 dec 2025</div>
+            alt="avi-skull" src="images/profile.png" />
+            <div><img alt="cal" src="images/calendar.png"/>30 dec 2025</div>
           </div>
   
           <h4>full body home workout</h4>
